# dominsights

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
docs/: index.md  modules.md
src/dominsights/: cli.py  config.py
src/dominsights/analytics/: insights.py  usage.py
src/dominsights/api/: main.py
src/dominsights/auth/: manager.py
src/dominsights/models/: schemas.py
src/dominsights/services/: ingestion.py
src/dominsights/storage/: database.py
tests/: test_insights.py
