[project]
    name = "dominsights"
    version = "0.0.1"
    description = "DomInsights is a local-first analytics platform for Dominion Energy customers."
    authors = [{ name = "Madhav Vij", email = "madhav13vij@gmail.com" }]
    readme = "README.md"
    keywords = ['python']
    requires-python = ">=3.12,<4.0"
    classifiers = [
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
    dependencies = [
        "dompower>=0.1.4",
        "duckdb>=1.4.4",
        "fastapi>=0.132.0",
        "matplotlib>=3.10.8",
        "pandas>=3.0.1",
        "pydantic>=2.12.5",
        "pydantic-settings>=2.13.1",
        "python-dotenv>=1.2.1",
        "typer>=0.24.1",
        "uvicorn>=0.41.0",
    ]

[project.urls]
    Homepage      = "https://MadhavVij.github.io/dominsights/"
    Repository    = "https://github.com/MadhavVij/dominsights"
    Documentation = "https://MadhavVij.github.io/dominsights/"
[project.scripts]
    dominsights = "dominsights.cli:app"

[dependency-groups]
    dev = [
        "pytest>=9.0.2",
        "pre-commit>=4.5.1",
        "tox-uv>=1.29.0",
        "deptry>=0.24.0",
        "ty>=0.0.14",
        "pytest-cov>=7.0.0",
        "ruff>=0.14.14",
        "mkdocs>=1.6.1",
        "mkdocs-material>=9.7.1",
        "mkdocstrings[python]>=1.0.2",
        "pandas-stubs>=3.0.0.260204",
    ]

[build-system]
    requires      = ["hatchling"]
    build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["src/dominsights"]

[tool.ty.environment]
    python         = "./.venv"
    python-version = "3.10"

[tool.pytest.ini_options]
    testpaths = ["tests"]

[tool.ruff]
    target-version = "py310"
    line-length    = 120
    fix            = true

[tool.ruff.lint]
    select = [
        # flake8-2020
        "YTT",
        # flake8-bandit
        "S",
        # flake8-bugbear
        "B",
        # flake8-builtins
        "A",
        # flake8-comprehensions
        "C4",
        # flake8-debugger
        "T10",
        # flake8-simplify
        "SIM",
        # isort
        "I",
        # mccabe
        "C90",
        # pycodestyle
        "E",
        "W",
        # pyflakes
        "F",
        # pygrep-hooks
        "PGH",
        # pyupgrade
        "UP",
        # ruff
        "RUF",
        # tryceratops
        "TRY",
    ]
    ignore = [
        # LineTooLong
        "E501",
        # DoNotAssignLambda
        "E731",
    ]

[tool.ruff.lint.per-file-ignores]
    "tests/*" = ["S101"]

[tool.ruff.format]
    preview = true

[tool.coverage.report]
    skip_empty = true

[tool.coverage.run]
    branch = true
    source = ["src"]
